# GitWarp

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  marketplace.json  package.json  pyproject.toml
.agents/plugins/: api_marketplace.json  marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: gitwarp
.codex-plugin/: plugin.json
.github/workflows/: check.yml
docs/: lesson.md  task.md
docs/superpowers/plans/: 2026-06-19-gitwarp-agent-orchestrator-implementation.md  2026-06-19-gitwarp-autopilot-implementation.md  2026-06-19-gitwarp-dossiers-implementation.md  2026-06-19-gitwarp-init-doctor-onboarding.md  2026-06-19-gitwarp-src-layout-restructure.md  2026-06-19-gitwarp-web-console-productization.md  2026-06-19-gitwarp-web-console.md  (+7 more)
hooks/: hooks-codex.json  hooks.json  session-start  session-start-codex
scripts/: check-release.sh  evaluate-skill-behavior.py  install-claude-plugin.sh  install-codex-plugin.sh  verify-install.sh
skills/gitwarp/: SKILL.md
src/gitwarp/: __init__.py  agents.py  cli.py  diagnostics.py  dossiers.py  foundation.py  ledger.py  reconcile.py  reporting.py  services.py  web.py  worktrees.py
tests/: helpers.py  test_branches.py  test_cli_lifecycle.py  test_doctor.py  test_domain.py  test_dossiers.py  test_gitwarp.py  test_ledger.py  test_matrix.py  test_next_actions.py  test_packaging.py  test_reconcile.py  test_runtime_sync.py  test_skill_eval.py  test_task_inbox.py  test_web_api.py  test_worktrees.py
web/: README.md
web/console/: index.html  package-lock.json  package.json  vite.config.ts
(+134 files in other folders)
